<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modul.detail.UserDetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/toolbarbg"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_toolbar">

        <RelativeLayout
            android:id="@+id/contentOfUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_detail"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="26dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/detail_avatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/todo"
                    tools:src="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/detail_name"
                style="@style/textContent"
                android:layout_below="@id/cv_detail"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                android:text="@string/name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_username"
                style="@style/textContent"
                android:layout_below="@id/detail_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/username"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/ll_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_username"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="2dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/detail_followers"
                    style="@style/textContent"
                    android:layout_marginStart="0dp"
                    android:layout_weight="1"
                    android:text="@string/followers"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/detail_following"
                    style="@style/textContent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/following"
                    android:textAlignment="center" />

            </LinearLayout>

            <TextView
                android:id="@+id/detail_company"
                style="@style/textContent"
                android:layout_below="@id/ll_info"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/company" />

            <TextView
                android:id="@+id/repository"
                style="@style/textContent"
                android:layout_below="@id/detail_company"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/repository" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/repository">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/followers" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/following" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tab_layout" />
        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/contentLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:contentDescription="@string/add_favorite"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:theme="@style/Theme.SubMissionTwo"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/teal_200" />

</androidx.constraintlayout.widget.ConstraintLayout>